--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -27,8 +27,10 @@ main section.categories-show {
         color: white;
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
-        border-radius: 0.25rem;
-      }
+        border-radius: 0.25rem; 
+        margin-bottom: 0.6rem;
+      } 
+
 
       a {
         text-decoration: none;
