--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,15 +1,23 @@
-<article>
+<article> 
+
   <%= link_to product_path(product) do %>
     <%= image_tag product.image.thumb.url , alt: product.name %>
     <h1>
       <span><%= product.name %></span>
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
-  <% end%>
-  <div>
+  <% end%> 
+   
+  <div> 
+    <% if (product.quantity === 0) %>
+    <aside class="soldout">SOLD OUT</aside> 
+    <% end %> 
+
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
-  </div>
+  </div> 
+ 
+
 </article>
