--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -19,6 +19,6 @@
       <h2><%=@categories_count%></h2>
   </td>
       <td>
-    <%= link_to "Categories", "/admin/products", class: 'btn btn-lg btn-primary' %>
+    <%= link_to "Categories", "/admin/categories", class: 'btn btn-lg btn-primary' %>
   </td>
     </tr> 
