--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -41,8 +41,14 @@
           <%# </ul>
         </li> %>
       </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
+      <ul class="navbar-nav"> 
+      <% if current_user %>
+          Signed in as <%= current_user.email %> <%= link_to 'Logout', '/logout', class: "nav-link" %>
+        <% else %>
+          <%= link_to 'Login', '/login', class: "nav-link" %> <%= link_to 'Signup', '/signup', class: "nav-link" %>
+        <% end %>
+        <li class="nav-item dropdown"> 
+        
           <a
             class="nav-link dropdown-toggle text-danger"
             href="#"
@@ -63,7 +69,8 @@
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li> 
-        <li><%= link_to 'About', :about, class: "nav-link"%>
+        <li><%= link_to 'About', :about, class: "nav-link"%> 
+        
       </ul>
     </div>
   </div>
